labs/examples/design-patterns-examples/src/com/examples/design/solid/d/good/Manager.java
package com.examples.design.solid.d.good;

public class Manager {
    IWorker worker;

    public void setWorker(IWorker w) {
        worker = w;
    }

    public void manage() {
        worker.work();
    }
}