labs/examples/design-patterns-examples/src/com/examples/design/solid/d/bad/Manager.java
package com.examples.design.solid.d.bad;

public class Manager {
    Worker worker;

    public void setWorker(Worker w) {
        worker = w;
    }

    public void manage() {
        worker.work();
    }
}
